# 6301yashinaka

./: .gitignore  lab.ipynb  lab1_task1.ipynb  lab1_task2.ipynb  lab2.py  lab3.py  lab4.py  test.py
metetl/: README.md  pyproject.toml
metetl/data/: to_download.json
metetl/src/metetl/: cli.py  decorators.py  logging_config.py
metetl/src/metetl/analysis/: aggregations.py  data_to_download.py
metetl/src/metetl/images/: models.py  processing.py
paintings/: 36023.json  37890.json  37913.json  37965.json  435749.json  435971.json  436644.json  437305.json  437685.json  438008.json  438654.json  440359.json  44523.json  44627.json  45631.json  459029.json  483279.json  486395.json  488580.json  489707.json  49084.json  49151.json  492736.json  53568.json  57216.json  632923.json  632957.json  632958.json  667298.json  699514.json  72937.json  73018.json  75050.json  76942.json  78143.json  830723.json
